<resources>
    <string name="app_name">TelePrompt - IT</string>
    <string name="blind_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui.</string>
    <string name="button_import">Import from textfile</string>
    <string name="button_start">Save and start</string>
    <string name="button_startType">Create new document</string>
    <string name="delete">Delete</string>
    <string name="settings_hint">Hint: Open settings to customize the teleprompter!</string>
    <string name="teletext_hint">Paste your text here</string>
    <string name="teletext_title_hint">Document Title</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_teleprompter">TeleprompterActivity</string>
    <string name="title_activity_type">Text</string>
    <string name="button_preview">Preview</string>
    <string name="type_activity">New File</string>
    <string name="empty_list">You donot have any old documents yet. Create a new one.</string>
    <string name="title_for_empty_view">No old documents</string>
    <string name="text_for_empty_view">Create a new one</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="appwidget_text">Teleprompter</string>
    <string name="add_widget">Add widget</string>
    <string name="dialog_message">Are you sure you want to delete this document?</string>
    <string name="cancel">Cancel</string>
    <string name="toast">Document Deleted!</string>
    <string name="display">Display</string>
    <string name="mirror_title">Mirror</string>
    <string name="mirror_content">Mirror the text</string>
    <string name="font_title">Font Size</string>
    <string name="font_summary">Set the fontsize</string>
    <string name="font">Font</string>
    <string name="font_select">Select a font</string>
    <string name="scrolling">Scrolling</string>
    <string name="auto_title">Auto-Start</string>
    <string name="auto_summary">Text starts scrolling automatically after given amount of time</string>
    <string name="delay">Delay</string>
    <string name="delay_text"> seconds</string>
    <string name="delay_summary">Amount of time to pass before the scrolling starts</string>
    <string name="countdown">Countdown</string>
    <string name="countdown_summary">Shows a countdown before scrolling begins</string>
    <string name="scroll_speed">Scrollspeed</string>
    <string name="scroll_speed_summary">Select a scrollspeed between 1 (slow) and 100 (fast)</string>
    <string name="colours">Colours</string>
    <string name="background_colour">Backgroundcolour</string>
    <string name="background_colour_summary">Select a backgroundcolour</string>
    <string name="text_colour">Textcolour</string>
    <string name="text_colour_summary">Select a textcolour</string>
    <string name="test">Test</string>
    <string name="test_summary">Test the current settings with a blind text</string>
</resources>
