<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aagamshah="http://aagamshah.com">
    <PreferenceCategory android:title="@string/display">
        <CheckBoxPreference
            android:contentDescription="@string/mirror_content"
            android:defaultValue="true"
            android:key="pref_mirror"
            android:summary="@string/mirror_content"
            android:title="@string/mirror_title" />
        <com.geek.aagamshah.capstone_project.SeekBarPreference
            android:defaultValue="24"
            android:dialogMessage=""
            android:key="pref_fontsize"
            android:max="128"
            android:summary="@string/font_summary"
            android:text=""
            android:title="@string/font_title"
            aagamshah:min="8"
            aagamshah:showSize="true" />
        <ListPreference
            android:defaultValue="Roboto"
            android:entries="@array/font"
            android:entryValues="@array/font"
            android:key="pref_font"
            android:summary="@string/font_select"
            android:title="@string/font" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/scrolling">
        <CheckBoxPreference
            android:contentDescription="@string/auto_title"
            android:defaultValue="true"
            android:key="pref_autostart"
            android:summary="@string/auto_summary"
            android:title="@string/auto_title" />
        <com.geek.aagamshah.capstone_project.SeekBarPreference
            android:defaultValue="2"
            android:dependency="pref_autostart"
            android:dialogMessage=""
            android:key="pref_startdelay"
            android:max="10"
            android:summary="@string/delay_summary"
            android:text="@string/delay_text"
            android:title="@string/delay"
            aagamshah:min="1" />
        <CheckBoxPreference
            android:contentDescription="@string/countdown_summary"
            android:defaultValue="true"
            android:dependency="pref_autostart"
            android:key="pref_showCountdown"
            android:summary="@string/countdown_summary"
            android:title="@string/countdown" />
        <com.geek.aagamshah.capstone_project.SeekBarPreference
            android:defaultValue="49"
            android:dialogMessage=""
            android:key="pref_speed"
            android:max="100"
            android:summary="@string/scroll_speed_summary"
            android:text=""
            android:title="@string/scroll_speed"
            aagamshah:hasPreview="true"
            aagamshah:justStart="true"
            aagamshah:min="1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/colours">
        <ListPreference
            android:defaultValue="#000000"
            android:entries="@array/colours"
            android:entryValues="@array/colours_values"
            android:key="pref_bgcolour"
            android:summary="@string/background_colour_summary"
            android:title="@string/background_colour" />
        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/colours"
            android:entryValues="@array/colours_values"
            android:key="pref_txtcolour"
            android:summary="@string/text_colour_summary"
            android:title="@string/text_colour" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/button_preview">
        <Preference
            android:key="pref_test"
            android:summary="@string/test_summary"
            android:title="@string/test" />

    </PreferenceCategory>
</PreferenceScreen>
